Modify menu configuration icon and fix menu vanishing on firefox mobile

--- a/css/domohouse.css
+++ b/css/domohouse.css
@@ -42,10 +42,6 @@ body {
 	box-shadow: 2px 2px 2px black;
 }
 
-.sb-slidebar.sb-style-overlay {
-	z-index: 9998; /* Set z-index high to ensure it overlays any other site elements. */
-}
-
 ul.menulist {
 	list-style: none;
 	padding: 0;
@@ -109,6 +105,12 @@ img.panelhome {
 	background: url(../img/menusprite.png) 0 -32px;
 }
 
+img.panelconf {
+	width: 32px;
+	height: 32px;
+	background: url(../img/menusprite.png) 32px -64px;
+}
+
 img.panelconfip {
 	width: 32px;
 	height: 32px;
@@ -139,7 +141,7 @@ img.panelabout {
 header {
 	position: fixed;
 	top: 0;
-	z-index: 9999;
+	z-index: 9998;
 	display: -webkit-box;
 	display: -webkit-flex;
 	display: flex;
